--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Loja de Peças Automotivas</title>
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Questrial', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
@@ -71,15 +71,18 @@
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
         }
-        label, select, input, button {
+        label {
+            display: block;
+            text-align: center;
+            margin: 20px 0 10px;
+        }
+        select, input {
             display: block;
             width: 100%;
-            margin: 10px 0;
-        }
-        select {
             padding: 10px;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 10px;
+            margin: 0 auto;
         }
         button {
             background: #007bff;
@@ -89,6 +92,7 @@
             cursor: pointer;
             font-size: 16px;
             border-radius: 20px;
+            margin-top: 20px;
         }
         button:hover {
             background: #0056b3;
@@ -101,10 +105,11 @@
             margin-top: 20px;
         }
         h2 {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Questrial', sans-serif;
+            text-align: center;
         }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
