--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             display: block;
             width: 100%;
             padding: 10px;
-            border: 1px solid #ccc;
+            border: 1px solid #007bff;
             border-radius: 10px;
             margin: 0 auto;
         }
@@ -88,11 +88,14 @@
             background: #007bff;
             color: white;
             border: none;
-            padding: 10px;
+            padding: 15px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 18px;
+            font-weight: bold;
             border-radius: 20px;
             margin-top: 20px;
+            text-align: center;
+            width: 100%;
         }
         button:hover {
             background: #0056b3;
@@ -153,7 +156,7 @@
         <label for="chassi">Chassi:</label>
         <input type="text" id="chassi" placeholder="Digite o chassi do veículo">
 
-        <button onclick="enviarWhatsApp()">Fazer Orçamento</button>
+        <button onclick="enviarWhatsApp()">FAZER ORÇAMENTO</button>
     </div>
 
     <img src="banner-phone.jpg" alt="Banner para Usuários de Telefone" class="banner-phone">
