--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
             <option value="Fiat">Fiat</option>
             <option value="Chevrolet">Chevrolet</option>
             <option value="Ford">Ford</option>
+            <option value="Renoult">Renoult</option>
+            <option value="Toyota">Toyota</option>
+            <option value="Hyundai">Hyundai</option>
+            <option value="BMW">BMW</option>
+            <option value="KIA">KIA</option>
+            <option value="Mitsubishi">Mitsubishi</option>
+            <option value="Nissan">Nissan</option>
+            <option value="Jeep">Jeep</option>
+            <option value="Suzuki">Suzuki</option>
+            <option value="Audi">Audi</option>
+            <option value="Mercedes">Mercedes</option>
         </select>
         <label for="veiculo">Veículo:</label>
         <input type="text" id="veiculo" placeholder="Digite o modelo do veículo">
